# Reminders

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: merge_check.yaml
examples/: config.example.json
src/: apple_reminders.rs  cli.rs  config.rs  cors.rs  hybrid_parser.rs  main.rs  reminder.rs
src/parser/: cors.rs  mod.rs  parser_ai.rs  parser_regexp.rs
